syntax = "proto3";

package main;

message DiscordBotState {
  repeated UserScore house_cup_score = 1;
}

message UserScore {
  string user_id = 1;
  int64 score = 2;
}
